--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,7 @@ body {
     font-size: 13px;
     line-height: 18px;
     font-family: arial, sans-serif;
-    color: #532f15;
-    background: url(images/bg-pattern.png) repeat 0 0;
+    background: url(images/puffy-clouds.png) repeat 0 0;
     min-width: 980px;
 }
 
@@ -75,7 +74,8 @@ h6 { font-size: 10px; line-height: 10px; }
 
 .shell { width: 980px; margin: auto; }
 .page-holder { background: url(images/trees.png) no-repeat 0 bottom; background-size: 100%;  position:relative; border-bottom:31px solid #5f362c;   }
-.container { background: #fff; border-radius: 4px; padding:20px; position:relative; z-index: 10;  }
+.container {  background-color: #fff;
+ border-radius: 4px; padding:20px; position:relative; z-index: 10;  }
 .main { padding-top:27px; }
 
 .more { font-family: 'sunshine_poppy'; font-size:11px; line-height:14px; }
